<resources>
    <string name="app_name">GrassAndroid</string>
    <string name="song_name">%1$s (%2$s)</string>
    <string name="rating">Hodnocení:</string>
    <string name="drink_country">Původ:</string>
    <string name="beer_brewery">Pivovar:</string>
    <string name="beer_degrees">Stupně:</string>
    <string name="beer_degrees_format">%1$s°</string>
    <string name="drink_alcohol">Alkohol:</string>
    <string name="drink_alcohol_format">%1$s%%</string>
    <string name="beer_ibu">IBU:</string>
    <string name="beer_category">Styl:</string>
    <string name="beer_hops">Chmel:</string>
    <string name="beer_malt_type">Typ sladu:</string>
    <string name="beer_malts">Slady:</string>
    <string name="rum_years">Stáří:</string>
    <string name="rum_type">Typ:</string>
    <string name="whiskey_years">Stáří:</string>
    <string name="whiskey_type">Typ:</string>
    <string name="wine_year">Rok:</string>
    <string name="wine_winery">Vinařství:</string>
    <string name="book_author">Autor:</string>
    <string name="released">Vydáno:</string>
    <string name="title_activity_login">Přihlášení</string>
    <string name="prompt_login">Jméno</string>
    <string name="prompt_password">Heslo</string>
    <string name="action_sign_in">Přihlásit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
